Updated LESS and JS to add an environment label when necessary + fixed meeting-metadata on Item view to be more readable

--- a/src/plonemeeting/portal/core/browser/static/less/institution_colors.less
+++ b/src/plonemeeting/portal/core/browser/static/less/institution_colors.less
@@ -81,6 +81,12 @@
         }
     }
 
+  // Do not display navbar links in red when institution is still in private
+  [class*='site-'] .plone-nav.plone-navbar-nav a.state-private {
+    color: var(--nav-text-color) !important;
+  }
+
+
     // Cookies
 
     .cc-cookies .cc-cookie-accept{
